# DFSM

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test_main.cpp
include/: NiceDFSM.h  sandboxdfsm.h
src/: CMakeLists.txt  main.cpp  sandboxdfsm.cpp
tests/: CMakeLists.txt  NiceDFSM.cpp  sandboxdfsm.cpp  transitionFunc.cpp
